fixing text align in mobile and desktop

--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -210,6 +210,14 @@ canvas {
 
 @media screen and (max-width: 988px) {
 
+    .tagline-landing {
+      
+            top: 0;
+            text-align: center;
+           
+        
+    }
+
     .pill-design {
         width: 100%;
 
