--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     list-style: none;
     text-decoration: none;
     overflow-x: hidden;
-    text-align: left;
+
 
 }
 :root{
